вынес логику по работе с таской в сущность. поменял тип для тасок

--- a/src/1_app/styles.css
+++ b/src/1_app/styles.css
@@ -1,4 +1,7 @@
 * {
+    --accent-color: #4a9cc1;
+    --accent-color-dark: #2d6995;
+
     padding: 0;
     margin: 0;
     box-sizing: border-box;
