--- a/src/1_app/styles.css
+++ b/src/1_app/styles.css
@@ -1,9 +1,26 @@
 * {
-    --accent-color-light: #4eb1e1;
-    --accent-color: #4a9cc1;
-    --accent-color-dark: #2d6995;
+  --accent-color-light: #4eb1e1;
+  --accent-color: #499cc2;
+  --accent-color-dark: #2d6995;
 
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.app-container {
+  min-height: 100vh;
+  background-color: var(--accent-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+.task-list-wrapper {
+  width: 100%;
+  max-width: 500px;
+  background-color: #fff;
+  padding: 10px 20px;
+  text-align: center;
 }
